fix: add invisible message to sample

--- a/packages/main/test/pages/styles/Input.css
+++ b/packages/main/test/pages/styles/Input.css
@@ -70,3 +70,12 @@
 	width: 100%;
 	height: 100%;
 }
+
+.green {
+	color: green;
+}
+
+.item-titles {
+	display: flex;
+	flex-direction: column;
+}
