--- a/packages/website/docs/_samples/main/Input/CustomSuggestions/main.css
+++ b/packages/website/docs/_samples/main/Input/CustomSuggestions/main.css
@@ -5,3 +5,12 @@
 	width: 100%;
 	height: 100%;
 }
+
+.green {
+	color: green;
+}
+
+.item-titles {
+	display: flex;
+	flex-direction: column;
+}
